# libNRCore

./: .gitignore  Android.mk  Makefile  Makefile.in  README.md  config.h  config.h.in  configure  configure.ac
Debug/: UnitTests
UnitTest/UnitTest/: SerializableTest.cpp  SerializableTest.h  UnitTest.1  main.cpp
UnitTest/UnitTest.xcodeproj/: project.pbxproj
UnitTests/: main.cpp
libNRCore.xcodeproj/: project.pbxproj
libNrCore.xcodeproj/: project.pbxproj
libNrCore.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
libnrcore/: libNRCore-Prefix.pch  libNRCore.m  nrcore.h  types.h
libnrcore/base/: Object.cpp  Object.h  ObjectEvent.h
libnrcore/config/: FlatConfig.cpp  FlatConfig.h
libnrcore/debug/: Log.cpp  Log.h
libnrcore/encoding/: Base58.cpp  Base58.h
libnrcore/encryption/: Aes.cpp  Aes.h  Cipher.cpp  Cipher.h  Rsa.cpp  Rsa.h  aes256cbc.cpp  aes256cbc.h  serpent.cpp  serpent.h  twofish.cpp  twofish.h
libnrcore/event/: EventBase.cpp  EventBase.h  Timer.cpp  Timer.h
libnrcore/gdi/: Bitmap.cpp  Bitmap.h
libnrcore/init/: Init.cpp  Init.h
libnrcore/interface/: SerializableInterface.h
libnrcore/io/: FifoInputStream.cpp  FifoStream.cpp  File.h  FileDescriptorRelay.cpp  FileOutputStream.cpp  Stream.cpp  Stream.h  StringStreamReader.cpp  StringStreamReader.h  TextFile.h  TextStream.h  Xml.cpp  Xml.h
libnrcore/maths/: SimpleFormula.cpp  SimpleFormula.h
libnrcore/memory/: Array.h  Buffer.h  ByteArray.cpp  ByteArray.h  DescriptorInstanceMap.h  FifoInputStream.h  File.h  FileDescriptorRelay.h  FileOutputStream.h  HashMap.h  IndexedList.h  InstancePool.h  LinkedList.h  List.h  Memory.cpp  Memory.h  ObjectArray.h  ObjectBlockArray.h  Ref.h  RefArray.h  RegularExpression.cpp  RegularExpression.h  RingBuffer.cpp  RingBuffer.h  Serializable.cpp  Serializable.h  StaticArray.h  Stream.cpp  String.cpp  String.h  StringList.cpp  StringList.h  StringStreamReader.cpp  StringStreamReader.h  TextFile.h
libnrcore/serializers/: LinkedList.h  Serializable.cpp  Serializable.h  SerializableString.cpp  SerializableString.h
libnrcore/socket/: Address.cpp  Address.h  Buffer.cpp  Buffer.h  Listener.cpp  Listener.h  ReliableUdp.cpp  ReliableUdp.h  Socket.cpp  Socket.h  SocketEventLoop.cpp  SocketEventLoop.h  Socks5.cpp  Socks5.h  UdpSocket.cpp  UdpSocket.h
libnrcore/threading/: HighResTimer.h  Mutex.cpp  Mutex.h  Semaphore.cpp  Semaphore.h  Task.cpp  Task.h  TaskMutex.cpp  Thread.cpp  Thread.h  ThreadSafeObject.h  ThreadWaitCondition.cpp  ThreadWaitCondition.h
src/: nrcore.h
src/debug/: Log.cpp  (+1 more)
(+186 files in other folders)
